// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot of App component 1`] = `
<div>
   loading 
</div>
`;

exports[`Snapshot of TableItem component 1`] = `
<div>
  <p
    id="5b5f145e605ec80c819f5824"
  >
    one
  </p>
  <button
    className="edit"
    onClick={[Function]}
  >
     Edit Item
  </button>
</div>
`;

exports[`Snapshot of TableItem component 2`] = `
<div>
  <input
    onChange={[Function]}
    value="one"
  />
  <p />
  <button
    className="save"
    onClick={[Function]}
  >
     Save Item
  </button>
</div>
`;

exports[`Snapshot of TableItem component 3`] = `
<div>
  <input
    onChange={[Function]}
    value="wow"
  />
  <p />
  <button
    className="save"
    onClick={[Function]}
  >
     Save Item
  </button>
</div>
`;

exports[`Snapshot of TableItem component 4`] = `
<div>
  <input
    onChange={[Function]}
    value="wow"
  />
  <p />
  <button
    className="save"
    onClick={[Function]}
  >
     Save Item
  </button>
</div>
`;

exports[`Snapshot of Tasks component 1`] = `
<div
  className="dataCenter"
>
  <form
    className="table"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      value=""
    />
    <p />
    <button>
      Submit
    </button>
  </form>
  <div
    className="tableDiv"
  >
    <table
      className="table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5825"
              >
                one
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5826"
              >
                two
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot of Tasks component 2`] = `
<div
  className="dataCenter"
>
  <form
    className="table"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      value=""
    />
    <p />
    <button>
      Submit
    </button>
  </form>
  <div
    className="tableDiv"
  >
    <table
      className="table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5825"
              >
                one
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5826"
              >
                two
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot of Tasks component 3`] = `
<div
  className="dataCenter"
>
  <form
    className="table"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      value=""
    />
    <p />
    <button>
      Submit
    </button>
  </form>
  <div
    className="tableDiv"
  >
    <table
      className="table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5826"
              >
                two
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot of Tasks component take two 1`] = `
<div
  className="dataCenter"
>
  <form
    className="table"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      value=""
    />
    <p />
    <button>
      Submit
    </button>
  </form>
  <div
    className="tableDiv"
  >
    <table
      className="table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5825"
              >
                one
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5826"
              >
                two
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot of Tasks component take two 2`] = `
<div
  className="dataCenter"
>
  <form
    className="table"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      value="cool"
    />
    <p />
    <button>
      Submit
    </button>
  </form>
  <div
    className="tableDiv"
  >
    <table
      className="table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5825"
              >
                one
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5826"
              >
                two
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot of Tasks component take two 3`] = `
<div
  className="dataCenter"
>
  <form
    className="table"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      value="cool"
    />
    <p />
    <button>
      Submit
    </button>
  </form>
  <div
    className="tableDiv"
  >
    <table
      className="table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5825"
              >
                one
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5826"
              >
                two
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot test of Tasks component TAKE 3 1`] = `
<div
  className="dataCenter"
>
  <form
    className="table"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      value=""
    />
    <p />
    <button>
      Submit
    </button>
  </form>
  <div
    className="tableDiv"
  >
    <table
      className="table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5825"
              >
                one
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5826"
              >
                two
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Snapshot test of Tasks component TAKE 3 2`] = `
<div
  className="dataCenter"
>
  <form
    className="table"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      value=""
    />
    <p
      id="warning"
    >
       Please type in a unique item to add it to the To-Do list!
    </p>
    <button>
      Submit
    </button>
  </form>
  <div
    className="tableDiv"
  >
    <table
      className="table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5825"
              >
                one
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              checked={true}
              className="checkbox"
              onChange={[Function]}
              type="checkbox"
            />
            <div>
              <p
                id="5b5f145e605ec80c819f5826"
              >
                two
              </p>
              <button
                className="edit"
                onClick={[Function]}
              >
                 Edit Item
              </button>
            </div>
            <button
              className="delete"
              onClick={[Function]}
            >
               Delete Item 
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
